# editor

./: Cargo.toml  TODO.md
crates/editor/: Cargo.toml
crates/editor/src/: lib.rs  location.rs  main.rs
crates/gui/: Cargo.toml
crates/tui/: Cargo.toml
crates/tui/src/: main.rs
src/: .location.rs.kak.74IiMZ  edot.rs  id_vec.rs  location.rs  main.rs  terminal.rs
