[package]
name = "editor"
version = "0.0.0"
authors = ["Tadeo Kondrak <me@tadeo.ca>"]
edition = "2018"

[dependencies]
ropey = "1.1"
anyhow = "1.0"
log = "0.4.8"
shlex = "0.1.1"
handy = "0.1.4"
thiserror = "1.0"
# xdg = "2.2.0"
# toml = "0.5.6"
# tree-sitter = "0.20.10"
# tree-sitter-rust = "0.20.3"
