[package]
name = "tui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
editor = { path = "../editor" }
termion = "1.5.5"
ropey = "1.1"
thiserror = "1.0"
signal-hook = "0.1.13"
crossbeam-channel = "0.4.2"
log = "0.4.8"
shlex = "0.1.1"
toml = "0.5.6"
xdg = "2.2.0"
handy = "0.1.4"
textmode = "0.4.0"

[dependencies.env_logger]
version = "0.7.1"
default-features = false
